--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -12,5 +12,6 @@
   "abort_sent": "🛑 已發送中斷訊號。",
   "loading_skill": "🪄 正在載入技能: `{}`",
   "exec_success": "✅ 已成功執行 `{}`",
-  "exec_failed": "❌ 執行 `{}` 失敗"
+  "exec_failed": "❌ 執行 `{}` 失敗",
+  "auto_retry": "🔄 **自動重試** (第 {} 次，共 {} 次) 由於錯誤..."
 }
