feat: implement /cron, thread support with auth inheritance, and preemptive render cleanup

--- a/locales/en.json
+++ b/locales/en.json
@@ -52,5 +52,23 @@
   "clear_success": "✅ Session state completely cleared",
   "abort_success": "✅ Abort signal sent",
   "skill_loading": "✅ Loading skill: {0}",
-  "skill_failed": "❌ Failed to load skill: {0}"
+  "skill_failed": "❌ Failed to load skill: {0}",
+  "cron_modal_title": "Schedule AI Prompt",
+  "cron_field_minute": "Minute (0-59)",
+  "cron_field_minute_hint": "e.g., 0, 30, or *",
+  "cron_field_hour": "Hour (0-23)",
+  "cron_field_hour_hint": "e.g., 8, 21, or *",
+  "cron_field_freq": "Frequency (Day/Weekday)",
+  "cron_field_freq_hint": "e.g., * (Daily), Mon-Fri, or 1 (Monthly)",
+  "cron_field_prompt": "AI Prompt Content",
+  "cron_field_prompt_hint": "Enter the instruction for the AI to run",
+  "cron_success": "✅ Schedule created: {0}",
+  "cron_invalid": "❌ Invalid format",
+  "cron_scheduled": "Next: {0} ({1})",
+  "cron_list_empty": "No scheduled tasks in this channel.",
+  "cron_list_title": "Scheduled Prompts",
+  "cron_delete_placeholder": "Select a task to delete",
+  "cron_deleted": "✅ Task deleted: {0}",
+  "cmd_cron_desc": "Schedule a recurring AI prompt for this channel",
+  "cmd_cron_list_desc": "List all scheduled prompts in this channel"
 }
