--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -52,5 +52,23 @@
   "clear_success": "✅ 已徹底清除會話狀態",
   "abort_success": "✅ 已發送中斷信號",
   "skill_loading": "✅ 正在載入 skill: {0}",
-  "skill_failed": "❌ 載入 skill 失敗: {0}"
+  "skill_failed": "❌ 載入 skill 失敗: {0}",
+  "cron_modal_title": "設定排程 AI 提示詞",
+  "cron_field_minute": "分鐘 (0-59)",
+  "cron_field_minute_hint": "例如: 0, 30, 或 *",
+  "cron_field_hour": "小時 (0-23)",
+  "cron_field_hour_hint": "例如: 8, 21, 或 *",
+  "cron_field_freq": "頻率 (日期/星期)",
+  "cron_field_freq_hint": "例如: * (每天), Mon-Fri, 或 1 (每月 1 號)",
+  "cron_field_prompt": "AI 提示詞內容",
+  "cron_field_prompt_hint": "請輸入預定執行時要發送給 AI 的指令",
+  "cron_success": "✅ 排程設定成功：{0}",
+  "cron_invalid": "❌ 時間格式無效，請檢查輸入。",
+  "cron_scheduled": "下次執行時間: {0} ({1})",
+  "cron_list_empty": "此頻道目前沒有排程任務。",
+  "cron_list_title": "目前的排程提示詞",
+  "cron_delete_placeholder": "選擇要刪除的排程...",
+  "cron_deleted": "✅ 已刪除排程: {0}",
+  "cmd_cron_desc": "在當前頻道設定定期的 AI 提示詞",
+  "cmd_cron_list_desc": "列出此頻道所有的排程任務"
 }
