Change config using model.

--- a/locales/en.json
+++ b/locales/en.json
@@ -42,6 +42,11 @@
   "config_mention_off": "off",
   "config_assistant_placeholder": "Select assistant name for this channel",
   "config_assistant_default": "Use global default",
+  "config_assistant_custom": "Custom name (Modal)",
+  "config_assistant_modal_title": "Set Assistant Name",
+  "config_assistant_modal_label": "Assistant Name",
+  "config_assistant_modal_hint": "Up to 48 chars. Control/risky chars are filtered.",
+  "config_assistant_invalid": "❌ Assistant name cannot be empty and must include visible characters.",
   "config_assistant_set": "✅ Updated this channel assistant_name to `{0}`",
   "cmd_lang_desc": "Switch bot interface language",
   "cmd_lang_opt_lang": "Select Language",
