--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -42,6 +42,11 @@
   "config_mention_off": "off",
   "config_assistant_placeholder": "選擇此頻道助手名稱",
   "config_assistant_default": "使用全域預設",
+  "config_assistant_custom": "自訂名稱 (Modal)",
+  "config_assistant_modal_title": "設定助手名稱",
+  "config_assistant_modal_label": "助手名稱",
+  "config_assistant_modal_hint": "最多 48 字，會過濾控制字元與危險符號",
+  "config_assistant_invalid": "❌ 助手名稱不可為空，且需包含可見字元。",
   "config_assistant_set": "✅ 已更新此頻道 assistant_name 為 `{0}`",
   "cmd_lang_desc": "切換機器人介面語言 (Switch Bot Language)",
   "cmd_lang_opt_lang": "選擇語言 (Select Language)",
